# archook

./: .flake8  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  archook.py  generate_tokens.py  pyproject.toml  requirements_build.txt  setup.py
.github/workflows/: ci.yml  codeql.yml  pypiPackaging.yaml
archook/: VERSION  __init__.py  archook.py
test/: create-conda-py27-32-env.bat  create-conda-py311-env.bat  create-conda-py36-env.bat  create-conda-py39-env.bat  setenv-conda-py27-32.bat  setenv-conda-py311.bat  setenv-conda-py36.bat  setenv-conda-py39.bat  simple-test-arcmap.bat  simple-test-arcmap.py  simple-test-arcpro.bat  simple-test-arcpro.py  simple-test.py  test_archook.py
test/bug-41/: bug-41.md  create-env.bat  test-gh-41.py
