[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archook"
dynamic = ["version"]
description = "Locates ArcPy and makes it available to the running Python distribution"
readme = "README.md"
license = "GPL-2.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
  { name = "James Ramm" },
]
maintainers = [
  { name = "Matt Wilkie", email = "matt.wilkie@yukon.ca" },
]
keywords = ["ArcGIS", "arcpy"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/JamesRamm/archook"
Repository = "https://github.com/JamesRamm/archook"
Issues = "https://github.com/JamesRamm/archook/issues"

[dependency-groups]
dev = [
  "build>=1.2.2",
  "pytest>=8.3.5",
  "twine>=6.1.0",
]

[tool.setuptools.dynamic]
version = { file = ["archook/VERSION"] }

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["archook"]

[tool.setuptools.package-data]
archook = ["VERSION"]

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__/*"]
